# aws-session-management

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  main.py  openapi.json  pyproject.toml
app/api/api_v1/: api.py
app/api/api_v1/router/: health.py  session.py
app/config/: config.py  init_settings.py  settings.py
app/core/: decorators.py  lifecycle.py  logging_setup.py
app/db/: dynamodb.py
app/exceptions/: exceptions.py
app/middlewares/: security_headers.py
app/schemas/: examples.py  session.py
app/services/: session.py  sqs.py
app/utils/: image_utils.py  openapi_utils.py
